--- a/ChangeWeather.csproj
+++ b/ChangeWeather.csproj
@@ -135,7 +135,7 @@
 	
 	<ItemGroup>
 		<PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-		<PackageReference Include="BepInEx.Unity" Version="6.0.0-pre.*" IncludeAssets="compile" />
+		<PackageReference Include="BepInEx.Core" Version="5.*" IncludeAssets="compile" />
 		<PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
 		<PackageReference Include="HarmonyX" Version="2.10.2" />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.7" />
